--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:studio": "prisma studio",
     "db:seed": "prisma db seed",
     "db:import": "npx tsx scripts/import-violations.ts",
+    "db:backfill-speed": "npx tsx scripts/backfill-speed-data.ts",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f"
